# CareConnect-

./: .env.example  .gitignore  API_GUIDE.md  MedDesertAI – Software Design Specification (SDS) & Functional Requirements.md  README.md  TECH_STACK.md  app.py  project.md  pyproject.toml  run_app.sh  test_streamlit.py
backend/: __init__.py  add_sample_coordinates.py  api.py  database.py  generate_embeddings.py  ingest_data.py  populate_demo_coordinates.py  rag_retrieval.py  schema.py  setup_db.py  test_rag_search.py
backend/agents/: __init__.py  graph.py  medical_desert_agent.py  recommendation_agent.py  state.py  tools.py  trust_scoring_agent.py
frontend/: __init__.py  app.py
frontend/components/: data_loader.py  map_viz.py
frontend/pages/: 1_🗺️_Map.py  2_🤖_Agent.py  3_🔍_Search.py
